# csrankings-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/csrankings_mcp/: __init__.py  config.py  data.py  ranking.py  server.py
tests/: test_config.py  test_ranking.py
