[project]
name = "csrankings-mcp"
version = "0.1.0"
description = "MCP server for CSRankings data — rank CS institutions by research area"
readme = "README.md"
authors = [
    { name = "wubingx2", email = "wubingx2@illinois.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0",
    "pandas>=2.0",
    "httpx>=0.25",
    "platformdirs>=4.0",
]

[project.scripts]
csrankings-mcp = "csrankings_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
